[ZEPPELIN-3441] Fix license check failure in r
rat plugin for r interpreter fail, seems to be related with #2089
It doesn't need to be included in 0.8.0 release, but want it to be cherry-picked into `branch-0.8` for 0.8.x releases, so release manager doesn't have issue with running `dev/publish_release.sh`

Hot Fix

[ZEPPELIN-3441](https://issues.apache.org/jira/browse/ZEPPELIN-3441)

Run `mvn verify -Pr` should pass
In CI, first matrix should pass. (https://travis-ci.org/minahlee/zeppelin/builds/374917837)

* Does the licenses files need update? No
* Is there breaking changes for older versions? No
* Does this needs documentation? No

Author: Mina Lee <minalee@apache.org>

Closes #2957 from minahlee/hotfix/ratR and squashes the following commits:

1d4ae6c91 [Mina Lee] Add rat check for r in travis
c323c4a8b [Mina Lee] Fix rat check exclude directory for r

(cherry picked from commit 3712ce697e5dd5df217280134968155c5d0b1276)
Signed-off-by: Jeff Zhang <zjffdu@apache.org>

--- a/pom.xml
+++ b/pom.xml
@@ -1071,16 +1071,11 @@
 
               <!-- compiled R packages (binaries) -->
               <exclude>**/R/lib/**</exclude>
-              <exclude>**/r/lib/**</exclude>
+              <exclude>**/lib/rzeppelin/**</exclude>
 
-               <!--R-related files with alternative licenses-->
+              <!--R-related files with alternative licenses-->
 
-              <exclude>**/R/rzeppelin/R/globals.R</exclude>
-              <exclude>**/R/rzeppelin/R/common.R</exclude>
-              <exclude>**/R/rzeppelin/R/protocol.R</exclude>
-              <exclude>**/R/rzeppelin/R/rServer.R</exclude>
-              <exclude>**/R/rzeppelin/R/scalaInterpreter.R</exclude>
-              <exclude>**/R/rzeppelin/R/zzz.R</exclude>
+              <exclude>**/R/rzeppelin/R/*.R</exclude>
               <exclude>**/src/main/scala/scala/Console.scala</exclude>
               <exclude>**/src/main/scala/org/apache/zeppelin/rinterpreter/rscala/Package.scala</exclude>
               <exclude>**/src/main/scala/org/apache/zeppelin/rinterpreter/rscala/RClient.scala</exclude>
