--- a/zeppelin-web/bower.json
+++ b/zeppelin-web/bower.json
@@ -34,7 +34,9 @@
     "MathJax": "2.7.0",
     "ngclipboard": "^1.1.1",
     "jsdiff": "3.3.0",
-    "ngInfiniteScroll": "^1.3.4"
+    "ngInfiniteScroll": "^1.3.4",
+    "jszip": "2.6.1",
+    "excel-builder-js": "excelbuilder#2.0.0"
   },
   "devDependencies": {
     "angular-mocks": "1.5.7"
