[ZEPPELIN-3307] added description in documentation. add tests.

--- a/conf/zeppelin-site.xml.template
+++ b/conf/zeppelin-site.xml.template
@@ -70,7 +70,7 @@
 <property>
   <name>zeppelin.notebook.collaborative.mode.enable</name>
   <value>true</value>
-  <description>Enable basic opportunity for collaborative editing. Does not change the logic of operation if the note is used by one person.</description>
+  <description>Enable collaborative mode</description>
 </property>
 
 <!-- Google Cloud Storage notebook storage -->
