Add a dependency of `hadoop-common` as `test` scope

--- a/spark/spark-shims/pom.xml
+++ b/spark/spark-shims/pom.xml
@@ -43,7 +43,7 @@
     </dependency>
 
     <!--
-      This is for ZEPPELIN-2221 using VersionInfo for check the version of Yarn.
+      Those two are for ZEPPELIN-2221 using VersionInfo for check the version of Yarn.
       It's checked that VersionInfo is compatible at least 2.2.0 to the latest one.
     -->
     <dependency>
@@ -51,6 +51,13 @@
       <artifactId>hadoop-common</artifactId>
       <version>2.2.0</version>
       <scope>provided</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.hadoop</groupId>
+      <artifactId>hadoop-common</artifactId>
+      <version>2.2.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
