--- a/spark/spark-shims/pom.xml
+++ b/spark/spark-shims/pom.xml
@@ -43,7 +43,7 @@
     </dependency>
 
     <!--
-      Those two are for ZEPPELIN-2221 using VersionInfo for check the version of Yarn.
+      This is for ZEPPELIN-2221 using VersionInfo for check the version of Yarn.
       It's checked that VersionInfo is compatible at least 2.2.0 to the latest one.
     -->
     <dependency>
@@ -51,6 +51,12 @@
       <artifactId>hadoop-common</artifactId>
       <version>2.6.5</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.guava</groupId>
+      <artifactId>guava</artifactId>
+      <version>19.0</version>
+      <scope>test</scope>
     </dependency>
   </dependencies>
 
