--- a/ksql/pom.xml
+++ b/ksql/pom.xml
@@ -34,7 +34,8 @@
     <description>Zeppelin KSQL support</description>
 
     <properties>
-        <commons-lang.version>3.3.2</commons-lang.version>
+        <commons-lang.version>3.7</commons-lang.version>
+        <jackson.version>2.9.6</jackson.version>
 
         <!-- test library versions -->
         <jna.version>4.2.0</jna.version>
@@ -54,6 +55,42 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-databind</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-annotations</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.core</groupId>
+          <artifactId>jackson-core</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.module</groupId>
+          <artifactId>jackson-module-parameter-names</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jdk8</artifactId>
+          <version>${jackson.version}</version>
+        </dependency>
+
+        <dependency>
+          <groupId>com.fasterxml.jackson.datatype</groupId>
+          <artifactId>jackson-datatype-jsr310</artifactId>
+          <version>${jackson.version}</version>
         </dependency>
 
         <dependency>
