[HOTFIX] Fix flaky travis build due to corrupted jar
(cherry picked from commit 98b926ae2e422e3b327faacdb396eff29070b44b)

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,10 @@ language: java
 
 sudo: false
 
+
+before_cache:
+    - sudo chown -R travis:travis $HOME/.m2
+    
 cache:
   apt: true
   directories:
