--- a/zeppelin-web/bower.json
+++ b/zeppelin-web/bower.json
@@ -49,6 +49,7 @@
         "src-noconflict/mode-scala.js",
         "src-noconflict/mode-python.js",
         "src-noconflict/mode-sql.js",
+        "src-noconflict/mode-sparql.js",
         "src-noconflict/mode-markdown.js",
         "src-noconflict/mode-pig.js",
         "src-noconflict/mode-sh.js",
