--- a/beam/pom.xml
+++ b/beam/pom.xml
@@ -227,7 +227,14 @@
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
-  
+
+    <dependency>
+      <groupId>${project.groupId}</groupId>
+      <artifactId>zeppelin-java</artifactId>
+      <version>${project.version}</version>
+      <scope>provided</scope>
+    </dependency>
+
     <dependency>
       <groupId>org.apache.commons</groupId>
       <artifactId>commons-exec</artifactId>
