--- a/pom.xml
+++ b/pom.xml
@@ -790,6 +790,13 @@
     </profile>
 
     <profile>
+      <id>java</id>
+      <modules>
+        <module>java</module>
+      </modules>
+    </profile>
+
+    <profile>
       <id>examples</id>
       <modules>
         <module>zeppelin-examples</module>
