--- a/beam/pom.xml
+++ b/beam/pom.xml
@@ -111,6 +111,12 @@
 
     <dependency>
       <groupId>org.apache.zeppelin</groupId>
+      <artifactId>zeppelin-java</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+
+    <dependency>
+      <groupId>org.apache.zeppelin</groupId>
       <artifactId>zeppelin-scio_${scala.binary.version}</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -224,13 +230,6 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>zeppelin-interpreter</artifactId>
-      <version>${project.version}</version>
-      <scope>provided</scope>
-    </dependency>
-
-    <dependency>
-      <groupId>${project.groupId}</groupId>
-      <artifactId>zeppelin-java</artifactId>
       <version>${project.version}</version>
       <scope>provided</scope>
     </dependency>
